Add base semantic markup with placeholder images and text ready for layout development and testing

--- a/index.html
+++ b/index.html
@@ -9,5 +9,37 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<div class="container">
+		<header>
+			<div class="header-logo">
+				<img src="http://placehold.it/100x100" alt="">
+			</div>
+			<div class="header-title">
+				<h1>David Mallard</h1>
+				<p>Front-End Web Developer</h2
+			</div>
+		</header>
+		<div class="cover-image">
+			<img src="http://placekitten.com/1200/400" alt="">
+		</div>
+		<section class="portfolio">
+			<h2 class="portfolio-header">Featured Work</h2>
+			<article class="portfolio-item">
+				<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+				<h3 class="portfolio-item-title">Item 1</h3>
+				<a href="#" class="portfolio-item-link">link</a>
+			</article>
+			<article class="portfolio-item">
+				<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+				<h3 class="portfolio-item-title">Item 2</h3>
+				<a href="#" class="portfolio-item-link">link</a>
+			</article>
+			<article class="portfolio-item">
+				<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+				<h3 class="portfolio-item-title">Item 3</h3>
+				<a href="#" class="portfolio-item-link">link</a>
+			</article>
+		</section>
+	</div>
 </body>
 </html>
