--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 	<div class="container">
-		<header>
-			<div class="header-logo">
+		<header class="grid">
+			<div class="header-logo grid-cell">
 				<img src="http://placehold.it/100x100" alt="">
 			</div>
-			<div class="header-title">
+			<div class="header-title grid-cell">
 				<h1>David Mallard</h1>
 				<p>Front-End Web Developer</h2
 			</div>
@@ -24,21 +24,23 @@
 		</div>
 		<section class="portfolio">
 			<h2 class="portfolio-header">Featured Work</h2>
-			<article class="portfolio-item">
-				<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
-				<h3 class="portfolio-item-title">Item 1</h3>
-				<a href="#" class="portfolio-item-link">link</a>
-			</article>
-			<article class="portfolio-item">
-				<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
-				<h3 class="portfolio-item-title">Item 2</h3>
-				<a href="#" class="portfolio-item-link">link</a>
-			</article>
-			<article class="portfolio-item">
-				<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
-				<h3 class="portfolio-item-title">Item 3</h3>
-				<a href="#" class="portfolio-item-link">link</a>
-			</article>
+			<div class="portfolio-items grid">
+				<article class="portfolio-item grid-cell">
+					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+					<h3 class="portfolio-item-title">Item 1</h3>
+					<a href="#" class="portfolio-item-link">link</a>
+				</article>
+				<article class="portfolio-item grid-cell">
+					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+					<h3 class="portfolio-item-title">Item 2</h3>
+					<a href="#" class="portfolio-item-link">link</a>
+				</article>
+				<article class="portfolio-item grid-cell">
+					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+					<h3 class="portfolio-item-title">Item 3</h3>
+					<a href="#" class="portfolio-item-link">link</a>
+				</article>
+			</div>
 		</section>
 	</div>
 </body>
