Add fluid images to prevent images going beyond their containers

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
 			</div>
 		</header>
 		<div class="cover-image">
-			<img src="http://placekitten.com/1200/400" alt="">
+			<img src="http://placekitten.com/1200/400" alt="" class="img-fluid">
 		</div>
 		<section class="portfolio">
 			<h2 class="portfolio-header">Featured Work</h2>
 			<div class="portfolio-items grid">
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Item 1</h3>
 					<a href="#" class="portfolio-item-link">link</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Item 2</h3>
 					<a href="#" class="portfolio-item-link">link</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image">
+					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Item 3</h3>
 					<a href="#" class="portfolio-item-link">link</a>
 				</article>
