Add typography settings - font, colours, alignment, etc

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>David Mallard: Front-End Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:300,400">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -14,9 +15,9 @@
 			<div class="header-logo grid-cell">
 				<img src="http://placehold.it/100x100" alt="">
 			</div>
-			<div class="header-title grid-cell">
-				<h1>David Mallard</h1>
-				<p>Front-End Web Developer</h2
+			<div class="header-text grid-cell">
+				<h1 class="header-title">David Mallard</h1>
+				<p class="header-subtitle">Front-End Web Developer</h2
 			</div>
 		</header>
 		<div class="cover-image">
