Add a class to the page header to target styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="container">
-		<header class="grid">
+		<header class="page-header grid">
 			<div class="header-logo grid-cell">
 				<img src="http://placehold.it/100x100" alt="">
 			</div>
