Fix markup and adjust sizing for the header subtitle

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="header-text grid-cell">
 				<h1 class="header-title">David Mallard</h1>
-				<p class="header-subtitle">Front-End Web Developer</h2
+				<h2 class="header-subtitle">Front-End Web Developer</h2>
 			</div>
 		</header>
 		<div class="cover-image">
