--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="container">
-		<header class="page-header grid">
+		<header class="page-header grid grid-full grid-small-fit">
 			<div class="header-logo grid-cell">
 				<img src="http://placehold.it/100x100" alt="">
 			</div>
@@ -25,7 +25,7 @@
 		</div>
 		<section class="portfolio">
 			<h2 class="portfolio-header">Featured Work</h2>
-			<div class="portfolio-items grid">
+			<div class="portfolio-items grid grid-gutters grid-full grid-small-1of2 grid-large-1of3">
 				<article class="portfolio-item grid-cell">
 					<img src="http://placekitten.com/320/240" alt="" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Item 1</h3>
