Replace the placeholder with a proper logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<header class="page-header grid grid-full grid-small-fit">
 			<div class="header-logo grid-cell">
-				<img src="http://placehold.it/96x96" alt="">
+				<img src="img/logo-1x.png" srcset="img/logo-2x.png 2x, img/logo-1x.png 1x" alt="Cartoon avatar as personal logo">
 			</div>
 			<div class="header-text grid-cell">
 				<h1 class="header-title">David Mallard</h1>
