Add titles and links for six actual projects

--- a/index.html
+++ b/index.html
@@ -28,18 +28,33 @@
 			<div class="portfolio-items grid grid-gutters grid-full grid-small-1of2 grid-large-1of3">
 				<article class="portfolio-item grid-cell">
 					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
-					<h3 class="portfolio-item-title">Item 1</h3>
-					<a href="#" class="portfolio-item-link">link</a>
+					<h3 class="portfolio-item-title">Fund Our Libraries</h3>
+					<a href="http://fundourlibraries.org.au/" class="portfolio-item-link">http://fundourlibraries.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
-					<h3 class="portfolio-item-title">Item 2</h3>
-					<a href="#" class="portfolio-item-link">link</a>
+					<h3 class="portfolio-item-title">Climate Action NSW</h3>
+					<a href="http://climateactionnsw.org.au/" class="portfolio-item-link">http://climateactionnsw.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
-					<h3 class="portfolio-item-title">Item 3</h3>
-					<a href="#" class="portfolio-item-link">link</a>
+					<h3 class="portfolio-item-title">Saving Our Forests</h3>
+					<a href="http://savingourforests.org.au/" class="portfolio-item-link">http://savingourforests.org.au/</a>
+				</article>
+				<article class="portfolio-item grid-cell">
+					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<h3 class="portfolio-item-title">OCC Bin Check-In</h3>
+					<a href="https://generalassemb.ly/education/user-experience-design" class="portfolio-item-link">https://generalassemb.ly/education/user-experience-design</a>
+				</article>
+				<article class="portfolio-item grid-cell">
+					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<h3 class="portfolio-item-title">Mockup to Article</h3>
+					<a href="https://github.com/tobiasziegler/fend-p1-mockup-to-article" class="portfolio-item-link">https://github.com/tobiasziegler/fend-p1-mockup-to-article</a>
+				</article>
+				<article class="portfolio-item grid-cell">
+					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<h3 class="portfolio-item-title">Animal Trading Cards</h3>
+					<a href="https://github.com/tobiasziegler/fend-p2-animal-trading-cards" class="portfolio-item-link">https://github.com/tobiasziegler/fend-p2-animal-trading-cards</a>
 				</article>
 			</div>
 		</section>
