--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 			</div>
 		</header>
 		<div class="cover-image">
-			<img src="http://placekitten.com/1200/400" alt="" class="img-fluid">
+			<picture>
+				<source media="(min-width: 30em)" srcset="img/front-end-dev-feature-large-2x.jpg 2x, img/front-end-dev-feature-large-1x.jpg 1x">
+				<img src="img/front-end-dev-feature-small-1x.jpg" srcset="img/front-end-dev-feature-small-2x.jpg 2x, img/front-end-dev-feature-small-1x.jpg 1x" alt="David conducting front-end user research" class="img-fluid">
+			</picture>
 		</div>
 		<section class="portfolio">
 			<h2 class="portfolio-header">Featured Work</h2>
