--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
 			<h2 class="portfolio-header">Featured Work</h2>
 			<div class="portfolio-items grid grid-gutters grid-full grid-small-1of2 grid-large-1of3">
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<img src="img/fund-our-libraries-1x.jpg" srcset="img/fund-our-libraries-2x.jpg 2x, img/fund-our-libraries-1x.jpg 1x" alt="Fund Our Libraries homepage" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Fund Our Libraries</h3>
 					<a href="http://fundourlibraries.org.au/" class="portfolio-item-link">http://fundourlibraries.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<img src="img/climate-action-nsw-1x.jpg" srcset="img/climate-action-nsw-2x.jpg 2x, img/climate-action-nsw-1x.jpg 1x" alt="Climate Action NSW homepage" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Climate Action NSW</h3>
 					<a href="http://climateactionnsw.org.au/" class="portfolio-item-link">http://climateactionnsw.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<img src="img/saving-our-forests-1x.jpg" srcset="img/saving-our-forests-2x.jpg 2x, img/saving-our-forests-1x.jpg 1x" alt="Saving Our Forests homepage" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Saving Our Forests</h3>
 					<a href="http://savingourforests.org.au/" class="portfolio-item-link">http://savingourforests.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<img src="img/occ-bin-check-in-1x.jpg" srcset="img/occ-bin-check-in-2x.jpg 2x, img/occ-bin-check-in-1x.jpg 1x" alt="OCC Bin Check-In UX presentation title page" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">OCC Bin Check-In</h3>
 					<a href="https://generalassemb.ly/education/user-experience-design" class="portfolio-item-link">https://generalassemb.ly/education/user-experience-design</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<img src="img/mockup-to-article-1x.jpg" srcset="img/mockup-to-article-2x.jpg 2x, img/mockup-to-article-1x.jpg 1x" alt="Mockup to Article web page" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Mockup to Article</h3>
 					<a href="https://github.com/tobiasziegler/fend-p1-mockup-to-article" class="portfolio-item-link">https://github.com/tobiasziegler/fend-p1-mockup-to-article</a>
 				</article>
 				<article class="portfolio-item grid-cell">
-					<img src="http://placekitten.com/640/480" alt="" class="portfolio-item-image img-fluid">
+					<img src="img/animal-trading-cards-1x.jpg" srcset="img/animal-trading-cards-2x.jpg 2x, img/animal-trading-cards-1x.jpg 1x" alt="Tapir" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Animal Trading Cards</h3>
 					<a href="https://github.com/tobiasziegler/fend-p2-animal-trading-cards" class="portfolio-item-link">https://github.com/tobiasziegler/fend-p2-animal-trading-cards</a>
 				</article>
