--- a/index.html
+++ b/index.html
@@ -32,31 +32,37 @@
 				<article class="portfolio-item grid-cell">
 					<img src="img/fund-our-libraries-1x.jpg" srcset="img/fund-our-libraries-2x.jpg 2x, img/fund-our-libraries-1x.jpg 1x" alt="Fund Our Libraries homepage" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Fund Our Libraries</h3>
+					<p>I implemented a WordPress child-parent theme combination, established the information architecture, and produced content and functionality to meet the campaign objectives.</p>
 					<a href="http://fundourlibraries.org.au/" class="portfolio-item-link">http://fundourlibraries.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="img/climate-action-nsw-1x.jpg" srcset="img/climate-action-nsw-2x.jpg 2x, img/climate-action-nsw-1x.jpg 1x" alt="Climate Action NSW homepage" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Climate Action NSW</h3>
+					<p>I developed a WordPress child theme, established the information architecture, and produced content and functionality to meet campaign objectives.</p>
 					<a href="http://climateactionnsw.org.au/" class="portfolio-item-link">http://climateactionnsw.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="img/saving-our-forests-1x.jpg" srcset="img/saving-our-forests-2x.jpg 2x, img/saving-our-forests-1x.jpg 1x" alt="Saving Our Forests homepage" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Saving Our Forests</h3>
+					<p>I developed a WordPress child theme, established the information architecture, and produced content.</p>
 					<a href="http://savingourforests.org.au/" class="portfolio-item-link">http://savingourforests.org.au/</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="img/occ-bin-check-in-1x.jpg" srcset="img/occ-bin-check-in-2x.jpg 2x, img/occ-bin-check-in-1x.jpg 1x" alt="OCC Bin Check-In UX presentation title page" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">OCC Bin Check-In</h3>
+					<p>In this project for a User Experience Design course, I conducted interviews and other research, then developed and evaluated low- and high-fidelity prototypes for a mobile website to address user needs.</p>
 					<a href="https://generalassemb.ly/education/user-experience-design" class="portfolio-item-link">https://generalassemb.ly/education/user-experience-design</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="img/mockup-to-article-1x.jpg" srcset="img/mockup-to-article-2x.jpg 2x, img/mockup-to-article-1x.jpg 1x" alt="Mockup to Article web page" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Mockup to Article</h3>
+					<p>In this project for a web development course, I used HTML5 to create a web page that matched the supplied mockup.</p>
 					<a href="https://github.com/tobiasziegler/fend-p1-mockup-to-article" class="portfolio-item-link">https://github.com/tobiasziegler/fend-p1-mockup-to-article</a>
 				</article>
 				<article class="portfolio-item grid-cell">
 					<img src="img/animal-trading-cards-1x.jpg" srcset="img/animal-trading-cards-2x.jpg 2x, img/animal-trading-cards-1x.jpg 1x" alt="Tapir" class="portfolio-item-image img-fluid">
 					<h3 class="portfolio-item-title">Animal Trading Cards</h3>
+					<p>In this project for a web development course, I generated content and used HTML5 and CSS to create a card-based layout to present it in line with a supplied mockup.</p>
 					<a href="https://github.com/tobiasziegler/fend-p2-animal-trading-cards" class="portfolio-item-link">https://github.com/tobiasziegler/fend-p2-animal-trading-cards</a>
 				</article>
 			</div>
