Add a responsive footer with social links and site colophon (copyright and source link)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:200,400">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial">
 </head>
 <body>
 	<div class="container">
@@ -67,6 +68,15 @@
 				</article>
 			</div>
 		</section>
+		<footer class="page-footer grid grid-full grid-large-fit">
+			<div class="social-links grid grid-1of2 grid-small-fit grid-cell">
+				<a href="https://twitter.com/tobiasziegler" class="zocial-twitter grid-cell">Twitter</a>
+				<a href="https://www.linkedin.com/in/tobbyziegler/" class="zocial-linkedin grid-cell">LinkedIn</a>
+				<a href="https://facebook.com/tobbyziegler" class="zocial-facebook grid-cell">Facebook</a>
+				<a href="https://github.com/tobiasziegler" class="zocial-github grid-cell">GitHub</a>
+			</div>
+			<p class="colophon grid-cell">© Copyright 2017 David Mallard. <a href="https://github.com/tobiasziegler/fend-p3-portfolio">View source code on GitHub.</a></p>
+		</footer>
 	</div>
 </body>
 </html>
