--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
 	<div class="container">
+		<!-- Header divs are separate full rows on the smallest screens, then occupy the same row at wider than the small breakpoint. -->
 		<header class="page-header grid grid-full grid-small-fit">
 			<div class="header-logo grid-cell">
+				<!-- All images have 1x and 2x variants to support high-density screens but minimise page weight on 1x screens. -->
 				<img src="img/logo-1x.png" srcset="img/logo-2x.png 2x, img/logo-1x.png 1x" alt="Cartoon avatar as personal logo">
 			</div>
 			<div class="header-text grid-cell">
@@ -21,7 +23,9 @@
 				<h2 class="header-subtitle">Front-End Web Developer</h2>
 			</div>
 		</header>
+		<!-- This always occupies the full width so doesn't need a grid setting. -->
 		<div class="cover-image">
+			<!-- Use a wide aspect ratio image on wider screens or a taller version of the image on narrow screens. -->
 			<picture>
 				<source media="(min-width: 30em)" srcset="img/front-end-dev-cover-large-2x.jpg 2x, img/front-end-dev-cover-large-1x.jpg 1x">
 				<img src="img/front-end-dev-cover-small-1x.jpg" srcset="img/front-end-dev-cover-small-2x.jpg 2x, img/front-end-dev-cover-small-1x.jpg 1x" alt="David conducting front-end user research" class="img-fluid">
@@ -29,6 +33,7 @@
 		</div>
 		<section class="portfolio">
 			<h2 class="portfolio-header">Featured Work</h2>
+			<!-- On mobile the items take up full width. At the small breakpoint they go to 2 per row, then up to 3 per row on wide screns. -->
 			<div class="portfolio-items grid grid-gutters grid-full grid-small-1of2 grid-large-1of3">
 				<article class="portfolio-item grid-cell">
 					<img src="img/fund-our-libraries-1x.jpg" srcset="img/fund-our-libraries-2x.jpg 2x, img/fund-our-libraries-1x.jpg 1x" alt="Fund Our Libraries homepage" class="portfolio-item-image img-fluid">
@@ -68,6 +73,7 @@
 				</article>
 			</div>
 		</section>
+		<!-- The footer uses nested grids - social links operate as a grid but also fit into a single row with colophon on wider screens -->
 		<footer class="page-footer grid grid-full grid-large-fit">
 			<div class="social-links grid grid-1of2 grid-small-fit grid-cell">
 				<a href="https://twitter.com/tobiasziegler" class="zocial-twitter grid-cell">Twitter</a>
