Change selector for social links to prevent using element name in conjunction with class

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 		<!-- The footer uses nested grids - social links operate as a grid but also fit into a single row with colophon on wider screens -->
 		<footer class="page-footer grid grid-full grid-large-fit">
 			<div class="social-links grid grid-1of2 grid-small-fit grid-cell">
-				<a href="https://twitter.com/tobiasziegler" class="zocial-twitter grid-cell">Twitter</a>
-				<a href="https://www.linkedin.com/in/tobbyziegler/" class="zocial-linkedin grid-cell">LinkedIn</a>
-				<a href="https://facebook.com/tobbyziegler" class="zocial-facebook grid-cell">Facebook</a>
-				<a href="https://github.com/tobiasziegler" class="zocial-github grid-cell">GitHub</a>
+				<a href="https://twitter.com/tobiasziegler" class="social-links-item zocial-twitter grid-cell">Twitter</a>
+				<a href="https://www.linkedin.com/in/tobbyziegler/" class="social-links-item zocial-linkedin grid-cell">LinkedIn</a>
+				<a href="https://facebook.com/tobbyziegler" class="social-links-item zocial-facebook grid-cell">Facebook</a>
+				<a href="https://github.com/tobiasziegler" class="social-links-item zocial-github grid-cell">GitHub</a>
 			</div>
 			<p class="colophon grid-cell">© Copyright 2017 David Mallard. <a href="https://github.com/tobiasziegler/fend-p3-portfolio">View source code on GitHub.</a></p>
 		</footer>
